--- a/ThesisMaster.tex
+++ b/ThesisMaster.tex
@@ -43,7 +43,7 @@
 %\usepackage{microtype}
 \usepackage{alltt}
 \usepackage{listings}
-
+\setlength{\footskip}{20pt}
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{corollary}{Corollary}[theorem]
