wip: Lob in ch. 5

--- a/Chapter_04.tex
+++ b/Chapter_04.tex
@@ -451,7 +451,12 @@ $\mathbf{Proof.}$ First, we prove that $SD$ is in NP by defining the decision pr
 
 Second, we prove that $SD$ is in NP-Hard. We do this by providing a polynomial time reduction from $nSAT$ to $SD$. Taking the input from $nSAT$, we let the size of the configuration $|C| = n$, that is, we let $n$ be the number of instruments on the flight deck. The maximum size of any solution $I$ to $SD$ is therefore $n$. We let the $nSAT$ formula be the negation of $\mathit{pre_s}(\laa)$. We iterate over $k \in \{1..n\}$. Thus, for $nSAT$, the $SD$ problem is run at most $n$ times. Any input to $nSAT$ will be at least of size $n$, so the number of times $SD$ is run is polynomial in the length of $nSAT$'s input. $\Box$
 
-It turns out that the Z3 Theorem Prover can solve this problem, which we turn to in the next chaper.
+\subsection{Summary}
+This chapter has applied $\DASL$ to aviation cases from real life, demonstrating its use as a foundation for future formal methods involving human machine interaction. The model of reasoning formalized in $\DASL$ is more realistic than those of $\SFive$ and $\mathcal{S}4$. Those logics present an idealization of reasoning and knowledge such that agents have negative introspection in the former and positive introspection in both. Both forms of introspection are too strong for human knowledge, and furthermore, are insufficient for reasoning about false beliefs. Furthermore, both logics are inappropriate for modeling belief because of their reflexive frame conditions. Weakening the reflexivity condition to a seriality condition yields the logics $\mathit{KD}45$ and $\mathit{KD}4$ respectively. This allows for reasonable formalizations of belief, but denies a logical connection between the truth or falsity of a proposition and the agent's mental state. With $\DASL$, both problems are solved. We have a realistic picture of knowledge and belief, and maintain a logical connection between a proposition's truth value and the agent's mental state, which is required for the contrapositive of the game theoretic inference.
+
+The next chapter presents a theoretic worry facing $\DASL$, and indeed most modal logics of belief and knowledge developed in the literature so far. 
+
+%It turns out that the Z3 Theorem Prover can solve this problem, which we turn to in the next chaper.
 	
 %TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTWe apply the logic just developed to the formal analysis of the Air France 447 aviation incident. We also mechanize the formalization in the Coq Proof Assistant. Our mechanization follows similar work by Malikovi\'c and \v Cubrilo~\cite{delcoq1,delcoq2}, in which they mechanize an analysis of the game of Cluedo using Dynamic Epistemic Logic, based on van Ditmarsch's formalization of the game~\cite{ditmarsch}. 
 %%It is commonly assumed that games must be adversarial, but this is not the case. Games need only involve situations in which players' payoffs depend on the actions of other players. Similarly, knowledge games need not be adversarial, and must only involve diverging information. Thus, it is appropriate to model aviation incidents as knowledge games of sorts, where players' payoffs depend on what others do, specifically the way the players communicate information with each other. The goal is to achieve an accurate situational awareness and provide flight control inputs appropriate for the situation. Failures to achieve this goal result in disaster, and often result from imperfect information flow. 
